# urza

./: .env_template  .gitignore  Dockerfile  README.md  alembic.ini  cli.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  run.py  serve.py
alembic/: env.py
alembic/versions/: 1a5ef8038b83_removed_can_create_hidden_from_user.py  1faa8157204a_initial_schema.py  3d3fe4933256_init.py  3dd251a4de7e_removed_s3_fields_from_bots.py  6013750571f7_remove_taskex_createid.py  737ac92b35b9_task_execution_fields.py  9bd242c2e44f_add_name_desc_to_tasks.py
tests/: test_dospaces.py  test_telegram.py
urza/api/: api.py  app.py  auth.py  schemas.py
urza/api/routes/: api_keys.py  bots.py  capabilities.py  executions.py  roles.py  task_executions.py  tasks.py  users.py
urza/bot/: handlers.py  urza_bot.py
urza/cli/: shell.py
urza/config/: display.py  settings.py  startup.py
urza/core/: bot_manager.py  module_manager.py  spaces_client.py  task_manager.py  telegram_client.py  urza_bot.py
urza/db/: database.py  init_db.py  models.py  redis_client.py  schema.sql  schemas.py  seed.py  session.py
urza/scripts/: create_admin_key.py
urza/services/bot/: __main__.py  main.py  protocol.py  settings.py
urza/services/orchestrator/: __main__.py  main.py  settings.py
urza/services/publisher/: __main__.py  main.py  protocol.py  settings.py
urza/services/urza_bot/: protocol.py
