[project]
name = "urza"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.3",
    "boto3>=1.42.38",
    "click>=8.3.1",
    "cmd2>=3.1.2",
    "croniter>=6.0.0",
    "cryptography>=46.0.4",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymysql>=1.1.2",
    "redis>=7.1.0",
    "telethon>=1.42.0",
    "uvicorn>=0.40.0",
]
